--- a/kadai11-1/style.css
+++ b/kadai11-1/style.css
@@ -3,19 +3,31 @@ h1.q1{
     position: relative;
   padding-left: 25px;
 }
-h1.q1::after{
-    content: "";
-  margin: auto;
+h1.q1::before{
+  content: "";
   position: absolute;
+  margin: auto;
   top: 0;
   bottom: 0;
   left: 2px;
   width: 13px;    
   height: 13px;   
-  border-top: 3px solid #000;     
-  border-right: 3px solid #000;  
+  border-radius: 50%;     
+  background-color:aquamarine;
 }
-
+h1.q1::after{
+  content: "";
+  position: absolute;
+  margin: auto;
+  top: 0;
+  bottom: 0;
+  left: 8px;
+  width: 10px;
+  height: 10px;
+  border-top: 3px solid #fff;
+  border-right: 3px solid #fff;
+  transform: rotate(45deg);
+}
 body{
     background-color:#fff;
     color:#666;
