--- a/kadai11-1/style.css
+++ b/kadai11-1/style.css
@@ -26,6 +26,7 @@ h1.q1::after{
   height: 10px;
   border-top: 3px solid #fff;
   border-right: 3px solid #fff;
+  -webkit-transform:rotate(45deg);
   transform: rotate(45deg);
 }
 body{
