--- a/kadai11-2/style.css
+++ b/kadai11-2/style.css
@@ -4,7 +4,7 @@ h1.q1{
     padding: 0.6em;
     background: #e0edff;
 }
-h1:after {
+h1.q1:after {
     position: absolute;
     content: '';
     top: 100%;
