--- a/kadai11-2/style.css
+++ b/kadai11-2/style.css
@@ -2,7 +2,7 @@
 h1.q2{
     position: relative;
     padding: 0.6em;
-    background: #e0edff;
+    background: aquamarine;
 }
 h1.q2:after {
     position: absolute;
@@ -14,6 +14,7 @@ h1.q2:after {
     width: 0;
     height: 0;
 }
+
 body{
     background-color:#fff;
     color:#666;
