--- a/kadai11-2/style.css
+++ b/kadai11-2/style.css
@@ -12,8 +12,8 @@ h1.q2:after {
     left: 5%;
     border: 15px solid transparent;
     border-top: 15px solid aquamarine;
-    width: 0;
-    height: 0;
+    width: 100px;
+    height: 100px;
 }
 
 body{
