--- a/kadai3/style.css
+++ b/kadai3/style.css
@@ -45,39 +45,14 @@ main{
 .main_goodpoints section img{
     width:100%;
 }
+.hotel{
+    width:200px;
+    padding:10px;
+    margin-top:20px;
+    float:left;
+}
 footer{
     display:flex;
     justify-content:space-between;
     margin:40px 40px 0;  
-}
-.news{
-    width:65.5%;
-}
-.news_title{
-    display:flex;
-    justify-content:space-between;
-    align-items:flex-end;
-}
-.news_title h2{
-    margin:0;
-}
-.news_list{
-    list-style:none;
-    padding:0;
-    border-top:1px dotted#000;
-}
-.news_list li{
-    border-top:1px dotted#000;
-    padding:12px 0;
-}
-.news_date{
-    font-weight:bold;
-    margin-right:30px;
-}
-.banner{
-    float:left;
-    width:31%;
-}
-.banner img{
-    width:100%;
 }
