--- a/kadai13-1/style.css
+++ b/kadai13-1/style.css
@@ -1,7 +1,8 @@
 @charset "UTF-8";
-a.q1:hover{
-    margin: 0; 
-    padding: 0; 
+a.q1:hover{ 
+    padding: 10px;
+    border:1px solid #ff9f25;
+    background:#fff; 
 }
 
 body{
