--- a/kadai13-2/style.css
+++ b/kadai13-2/style.css
@@ -1,7 +1,12 @@
 @charset "UTF-8";
-a.q2:hover{ 
+a.q2:hover{
+    width:300px;
+    height:100px;
+    line-height:100px;
+    border-radius:30px; 
     color:#ff9f25;
     background-color:#ff9f25;
+    text-align:center;
 }
 
 body{
