--- a/kadai13-2/style.css
+++ b/kadai13-2/style.css
@@ -4,7 +4,7 @@ a.q2:hover{
     height:90px;
     line-height:100px;
     border-radius:30px; 
-    color:#ff9f25;
+    color:#fff;
     background-color:#ff9f25;
     text-align:center;
 }
