--- a/kadai13-2/style.css
+++ b/kadai13-2/style.css
@@ -3,7 +3,7 @@ a.q2:hover{
     width:300px;
     height:100px;
     line-height:100px;
-    border-radius:50px; 
+    border-radius:100vh; 
     color:#fff;
     background-color:#ff9f25;
     text-align:center;
