--- a/training_js05-1/style.css
+++ b/training_js05-1/style.css
@@ -1,29 +1,37 @@
 @charset "UTF-8";
 .btn1{
-    padding: 10px;
+    width:300px;
+    height:100px;
+    line-height:100px;
     border-radius:100vh; 
     color:#000000;
-    background-color:aliceblue;
+    background-color:#afa9a9;
     text-align:center;
 }
 .btn2{
-    padding: 10px;
+    width:300px;
+    height:100px;
+    line-height:100px;
     border-radius:100vh; 
     color:#000000;
-    background-color:aliceblue;
+    background-color:#afa9a9;
     text-align:center;
 }
 .btn3{
-    padding: 10px;
+    width:300px;
+    height:100px;
+    line-height:100px;
     border-radius:100vh; 
     color:#000000;
-    background-color:aliceblue;
+    background-color:#afa9a9;
     text-align:center;
 }
 .btn4{
-    padding: 10px;
+    width:300px;
+    height:100px;
+    line-height:100px;
     border-radius:100vh; 
     color:#000000;
-    background-color:aliceblue;
+    background-color:#afa9a9;
     text-align:center;
 }
