--- a/training_js05-1/style.css
+++ b/training_js05-1/style.css
@@ -1,36 +1,44 @@
 @charset "UTF-8";
 .btn1{
-    width:300px;
-    height:100px;
-    line-height:100px;
-    border-radius:100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 0;
+    width: 300px;
     color:#000000;
     background-color:#afa9a9;
     text-align:center;
 }
 .btn2{
-    width:300px;
-    height:100px;
-    line-height:100px;
-    border-radius:100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 0;
+    width: 300px;
     color:#000000;
     background-color:#afa9a9;
     text-align:center;
 }
 .btn3{
-    width:300px;
-    height:100px;
-    line-height:100px;
-    border-radius:100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 0;
+    width: 300px;
     color:#000000;
     background-color:#afa9a9;
     text-align:center;
 }
 .btn4{
-    width:300px;
-    height:100px;
-    line-height:100px;
-    border-radius:100vh; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;
+    padding: 1em 0;
+    width: 300px;
     color:#000000;
     background-color:#afa9a9;
     text-align:center;
